--- a/courses.html
+++ b/courses.html
@@ -97,7 +97,7 @@
                   <img class="acc-pt-pic" src="assets/images/pt-icon-cropped.png" alt="" width="200px">
                   </div>
                 </div>
-                <!--Tabs for PT-->
+                <!--Tabs for PT Courses-->
                 <div class="d-flex align-items-start top-tabs">
                   <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                     <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Level 2 Certificate in Gym Instructor</button>
@@ -105,13 +105,13 @@
                     <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Diploma in Gym Instructing & Personal Training</button>
                    </div>
                   <div class="tab-content" id="v-pills-tabContent">
-                  <!--Indoor tab-->
+                  <!--Level 2 Gym Instructor tab-->
                     <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
                       <div class="container-fluid">
                         <div class="row">
                           <div class="col-12">
                             <h4>Certificate in Gym Instructing</h4>
-                            <p>The course has 6 units which are:</p>
+                            <p>The course has 5 units which are:</p>
                               <li>Principles of anatomy, physiology and fitness</li>
                               <li>Professionalism and customer care for fitness instructors</li>
                               <li>Health and safety in the fitness environment</li>
@@ -120,18 +120,24 @@
                         </div>
                     </div>
                     </div>
-                  <!--Outdoor tab-->
+                    </div>
+                  <!--Level 3 Personal Trainer tab-->
                     <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                       <div class="container-fluid">
                         <div class="row">
-                          <div class="col-12 col-sm-4">
-                          <img class="acc-tab-pic" src="/assets/images/outdoor-pt.jpg" alt="" width="250px">
+                          
+                          <div class="col-12">
+                            <div class="col-12">
+                              <h4>Diploma in Personal Training</h4>
+                              <p>The course has 6 units which are:</p>
+                                <li>Applied anatomy and physiology for exercise, health and fitness</li>
+                                <li>The principles of nutrition and their application to exercise and health</li>
+                                <li>Understanding lifestyle, health, wellbeing and common medical
+                                  conditions</li>
+                                <li>Encouraging positive health and fitness behaviours in clients</li>
+                                <li>Programme design and delivery for personal training</li>
+                                <li>Professionalism and business acumen for personal trainers</li>
                           </div>
-                          <div class="col-12 col-sm-7">
-                            <p>Training outdoors is a really fun way to get fit and have personal training. 
-                            We have all sorts of portable equipment that we can use in conjunction with outdoor locations.</p>
-                            <p>Shoeburyness and the seafront in general has so many interesting locations we can use. 
-                            We can use steps, beaches, hills, parks, woods and other places to have a great workout!</p>
                           </div>
                        </div>
                       </div>
