--- a/gym.html
+++ b/gym.html
@@ -92,7 +92,7 @@
                     <h3 class="get-in-contact btn"><a href="#contactform">Get in Contact</a></h3>
                   </div>
                   <div class="col-12 col-md-4">
-                  <img class="acc-pt-pic" src="assets/images/gym-front.JPG" alt="" width="200px">
+                  <img class="acc-pic" src="assets/images/gym-front.JPG" alt="" width="200px">
                   </div>
                 </div>
                 <!--Tabs for PT-->
@@ -210,7 +210,7 @@
                     <h3 class="get-in-contact btn"><a href="#contactform">Free Injury Assessment</a></h3>
                   </div>
                   <div class="col-12 col-md-6">
-                    <img class="acc-pt-pic" src="/assets/images/sarah-sm.jpeg" alt="">
+                    <img class="acc-pic" src="/assets/images/sarah-sm.jpeg" alt="">
                   </div>
                 </div>
               </div>
