Comments added to Gym and Index

--- a/gym.html
+++ b/gym.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" integrity="sha384-EvBWSlnoFgZlXJvpzS+MAUEjvN7+gcCwH+qh7GRFOGgZO0PuwOFro7qPOJnLfe7l" crossorigin="anonymous">
@@ -14,6 +13,7 @@
 <body>
     <header>
       <div>
+        <!----Navigation bar--->
         <nav class="navbar navbar-expand-md navbar-light fixed-top shadow p-3 mb-4 bg-white">
           <div class="container-fluid no-padding">
             <a class="navbar-brand" href="index.html"><img src="assets/images/logo_blue.png" height="60px"></a>
@@ -337,8 +337,10 @@
         </div>
       </div>
     </section>
+    <!---Footer---->
     <footer>
       <div class="row footer bg-dark justify-content-center">
+        <!---Footer Left---->
         <div class="col-7 col-md-5 footer-left">
           <p>Unit A3</p> 
           <p class="word-wrap">Seedbed Business Centre,</p>
@@ -348,6 +350,7 @@
           <br>
           <p><i class="bi bi-telephone-fill"></i> 01702 382390</p>
         </div>
+        <!---Footer Right---->
         <div class="col-5 col-md-5 footer-right">
           <div class="footer-text-right">Follow us on</div>
           <div class="social-bottom row">
