--- a/gym.html
+++ b/gym.html
@@ -79,24 +79,22 @@
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
             <div class="accordion-body">
-              <div class="container-fluid">
+              <div class="container-fluid no-padding">
                 <div class="row top-tabs">
-                  <div class="col-12 col-md-8">
+                  <div class="col-12 col-md-6">
                     <p>Personal training is by far the top service you can get in any gym and at Balanced Training we take it to the next level. 
                     Our mission is to empower our clients to achieve their goals and we are leading the way with personal training in Southend & Shoeburyness. 
                     We have helped hundreds of people just like you, transform their bodies and mindset.</p>
                     <p>At Balanced Training it is more than just ‘the session’ its about helping people change to what they want to become.</p>
                     <p>There are many reasons people come to us and often it’s an accumulation of many different things.</p>
                     <br>
-        
-                    <h3 class="get-in-contact btn"><a href="#contactform">Get in Contact</a></h3>
                   </div>
-                  <div class="col-12 col-md-4">
-                  <img class="acc-pic" src="assets/images/gym-front.JPG" alt="" width="200px">
+                  <div class="col-12 col-md-6">
+                  <img class="acc-pt-pic" src="assets/images/gym-front.JPG" alt="">
                   </div>
                 </div>
                 <!--Tabs for PT-->
-                <div class="d-flex align-items-start top-tabs">
+                <div class="d-flex top-tabs shade">
                   <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                     <button class="nav-link active" id="v-pills-home-tab tabcol" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Indoors</button>
                     <button class="nav-link" id="v-pills-profile-tab tabcol" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Outdoors</button>
@@ -106,80 +104,86 @@
                   <div class="tab-content" id="v-pills-tabContent">
                   <!--Indoor tab-->
                     <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-                      <div class="container-fluid">
-                        <div class="row">
-                          <div class="col-12 col-sm-6">
-                            <p>
-                              Delivery of personal training in our studio is by far the most interactive way to personal train. 
+                      <div class="container-fluid no-padding">
+                        <div class="row no-padding">
+                          <div class="col-11 col-md-8 no-padding text-smaller">
+                            <p> 
                               The environment is made for all types people wanting a private facility and almost feel like they are 
                               training in their very own gym. We have all the main bits of kit and some cool extras:</p>
-                              <table class="table-width">
-                                <tr>
-                                  <td>Ski-Erg</td><td>Assault Bike</td><td>Resistance Machines</td>
-                                </tr>
-                                <tr>
-                                  <td>Rowers</td><td>TRX</td><td>Cable Machine</td>
-                                </tr>
-                                <tr>
-                                  <td>Treadmill</td><td>Free weights</td><td>Speciality Barbells</td>
-                                </tr>
-                              </table>
+                              <div class="row">
+                                <div class="col-12 col-sm-4 align-items-center">Ski-Erg</div>
+                                <div class="col-12 col-sm-4 align-items-center">Assault Bike</div>
+                                <div class="col-12 col-sm-4 align-items-center">Resistance Machines</div>
+                              </div>
+                              <div class="row">
+                                <div class="col-12 col-sm-4 align-items-center">Rowers</div>
+                                <div class="col-12 col-sm-4 align-items-center">TRX</div>
+                                <div class="col-12 col-sm-4 align-items-center">Cable Machine</div>
+                              </div>
+                              <div class="row">
+                                <div class="col-12 col-sm-4 align-items-center">Treadmill</div>
+                                <div class="col-12 col-sm-4 align-items-center">Free weights</div>
+                                <div class="col-12 col-sm-4 align-items-center">Speciality Barbells</div>
+                              </div>
                               <br>
                               <p>All together this offers some of the best focused personal training.</p>
                           </div>
-                          <div class="col-12 col-sm-6">
-                            <img class="acc-tab-pic" src="/assets/images/sarah-pt.jpg" alt="" width="250px">
+                      
+                          <div class="col-11 col-md-4 align-items-center">
+                            <img class="acc-tab-pic" src="/assets/images/sarah-pt.jpg" alt="">
                           </div>
                         </div>
                     </div>
                     </div>
                   <!--Outdoor tab-->
                     <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-                      <div class="container-fluid">
-                        <div class="row">
-                          <div class="col-12 col-sm-4">
-                          <img class="acc-tab-pic" src="/assets/images/outdoor-pt.jpg" alt="" width="250px">
-                          </div>
-                          <div class="col-12 col-sm-7">
+                      <div class="container-fluid no-padding">
+                        <div class="row no-padding">
+                          <div class="col-12 col-sm-7 no-padding text-smaller">
                             <p>Training outdoors is a really fun way to get fit and have personal training. 
                             We have all sorts of portable equipment that we can use in conjunction with outdoor locations.</p>
                             <p>Shoeburyness and the seafront in general has so many interesting locations we can use. 
                             We can use steps, beaches, hills, parks, woods and other places to have a great workout!</p>
+                          </div>
+                          <div class="col-12 col-sm-4 no-padding">
+                            <img class="acc-tab-pic" src="/assets/images/outdoor-pt.jpg" alt="">
                           </div>
                        </div>
                       </div>
                     </div>
                     <!--Online tab-->
                     <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
-                      <div class="container-fluid">
-                        <div class="row">
-                          <div class="col-12 col-sm-7">
+                      <div class="container-fluid no-padding">
+                        <div class="row no-padding">
+                          <div class="col-11 col-sm-7 no-padding text-smaller">
                             <p>Training online means we can train you anywhere in the world be it if you are 
                               in your home or on the other side of the planet.</p>
-                            <p>Using technology like Zoom/Skype/Facebook/Whatsapp we will find a way to be able to be in contact with you.</p>
+                            <p>Using technology like Zoom/ Skype/ Facebook/ Whatsapp we will find a way to be able to be in contact with you.</p>
                           </div>
-                          <div class="col-12 col-sm-5">
-                            <img class="acc-tab-pic" src="/assets/images/online-pt.png" alt="" width="250px">
+                          <div class="col-11 col-sm-5 no-padding">
+                            <img class="acc-tab-pic" src="/assets/images/online-pt.png" alt="">
                           </div>
                        </div>
                       </div>
                     </div>
                     <!--Program tab-->
                     <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
-                      <div class="container-fluid">
-                        <div class="row">
-                          <div class="col-12 col-sm-7">
+                      <div class="container-fluid no-padding">
+                        <div class="row no-padding">
+                          <div class="col-12 col-sm-7 no-padding text-smaller">
                             <p>As an extention to online training we can write specific programs for many goals. We can do some of the fitness and health assessments in person if you are local and build a progrm from there.</p>
                             <p>Between us we have experience of competing of training towards many different physical goals: Sprinting, Marathons, treks, swimming, tough mudders and obstacle course races.</p>
                             <p></p>
                           </div>
-                          <div class="col-12 col-sm-5">
+                          <div class="col-12 col-sm-5 no-padding">
                             <img class="acc-tab-pic" src="/assets/images/tab-pic-prog.png" alt="" width="250px">
                           </div>
                        </div>
                       </div>
                     </div>
                   </div>
+                </div><div class="row no-padding shade">
+                  <h3 class="get-in-contact btn"><a href="#contactform">Get in touch!</a></h3>
                 </div>
             </div>
           </div>
@@ -210,7 +214,7 @@
                     <h3 class="get-in-contact btn"><a href="#contactform">Free Injury Assessment</a></h3>
                   </div>
                   <div class="col-12 col-md-6">
-                    <img class="acc-pic" src="/assets/images/sarah-sm.jpeg" alt="">
+                    <img class="acc-pt-pic" src="/assets/images/sarah-sm.jpeg" alt="">
                   </div>
                 </div>
               </div>
