Courses Page updated

--- a/courses copy 2.html
+++ b/courses copy 2.html
@@ -189,62 +189,80 @@
               <div class="container-fluid">
                 <div class="row top-tabs">
                   <div class="col-12 col-md-6">
-                    <h3>Becoming a Sports Massage Therapist</h3>
-                    <p>Our Sports Massage courses can supply you with the skills, 
+                    <p>Level 3 certificate in sports massage therapy can supply you with the skills, 
                       knowledge and experience with performing sports massage techniques on a range of clients. 
                       Completion of the course will allow you to work within an organisational environment, 
                       such as sports teams and clinical environment, as well as give you the qualifications 
                       to become self-employed as well as provide a good base for further courses and degrees 
                       such as sports therapy, physiotherapy, osteopath etc…</p>
-                      <p>The Level 3 course would be the starting point in your journey as a Sports massage therapist the Level 4 is 
-                        for more diagnosing injuries and furthering your knowledge in the field of sports therapy.</p>
                     <br>
-                    <p></p>
+
+                    Anatomy and physiology for sports
+                    massage
+                    J/506/7220 3 10
+                    2. Principles of health and fitness R/506/7222 2 3
+                    3. Understand the principles of soft tissue
+                    dysfunction
+                    Y/506/7223 3 3
+                    4. Professional practice in sports massage D/506/7224 3 5
+                    5. Sports massage treatments T
+
+                    <p>We offer 30 or 60 minute sports massage sessions for those who need to take some time for yourself!</p>
+                    <br>
+                    <p>Sports massage relaxes tight muscles, increases movement and blood flow to the area which will allow 
+                    you to train more effectively and move more comfortably in your day-to-day life!</p>
+                    <br>
+                    <h3 class="get-in-contact btn"><a href="#contactform">Free Injury Assessment</a></h3>
                   </div>
                   <div class="col-12 col-md-6">
                     <img class="acc-pt-pic" src="/assets/images/sm-icon.png" alt="">
                   </div>
                 </div>
-                <!--Test start-->
+<!--Test start-->
                 <div class="top-tabs">
                   <div class="nav nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                    <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#l3sports-massage" type="button" role="tab" aria-controls="l3sports-massage" aria-selected="true">Level 3 Diploma in Sports Massage</button>
-                    <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#l4sports-massage" type="button" role="tab" aria-controls="l4sports-massage" aria-selected="false">Level 4 Certificate in Sports Massage</button>
+                    <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="false">Level 2 Certificate in Gym Instructor</button>
+                    <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="true">Level 3 Diploma in Personal Training</button>
                    </div>
                   <div class="tab-content" id="v-pills-tabContent">
                   <!--Level 2 Gym Instructor tab-->
-                    <div class="tab-pane fade show active" id="l3sports-massage" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                    <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
                       <div class="container-fluid">
                         <div class="row">
                           <div class="col-12">
                             <p>The course has 5 units which are:</p>
-                              <li>Anatomy and physiology for sports massage</li>
-                              <li>Principles of health and fitness</li>
-                              <li>Understand the principles of soft tissue dysfunction</li>
-                              <li>Professional practice in sports massage</li>
-                              <li>Sports massage treatments</li>
+                              <li>Principles of anatomy, physiology and fitness</li>
+                              <li>Professionalism and customer care for fitness instructors</li>
+                              <li>Health and safety in the fitness environment</li>
+                              <li>Conducting client consultations to support positive behaviour change</li>
+                              <li>Planning and instructing gym-based exercise</li>
                               <br>
                           </div>
                         </div>
                       </div>
                     </div>
                   <!--Level 3 Personal Trainer tab-->
-                    <div class="tab-pane fade" id="l4sports-massage" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                    <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                       <div class="container-fluid">
                         <div class="row">
                           
                           <div class="col-12">
                             <div class="col-12">
-                              <p>The course has 3 units which are:</p>
-                                <li>Conducting subjective and objective assessment</li>
-                                <li>Provide sports massage techniques to prevent and manage injury</li>
-                                <li>Treatment modalities to support soft tissue repair</li>
+                              <p>The course has 6 units which are:</p>
+                                <li>Applied anatomy and physiology for exercise, health and fitness</li>
+                                <li>The principles of nutrition and their application to exercise and health</li>
+                                <li>Understanding lifestyle, health, wellbeing and common medical
+                                  conditions</li>
+                                <li>Encouraging positive health and fitness behaviours in clients</li>
+                                <li>Programme design and delivery for personal training</li>
+                                <li>Professionalism and business acumen for personal trainers</li>
                                 <br>
                           </div>
                           </div>
                        </div>
                       </div>
                     </div>
+                    <!--Complete Diploma tab-->
                   </div>
                 </div>
 
@@ -255,6 +273,48 @@
 
 
 
+                <div class="top-tabs">
+                  <div class="nav nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                    <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Level 3 Diploma in Sports Massage</button>
+                    <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Level 4 Certificate in Sports Massage</button>
+                   </div>
+                  <div class="tab-content" id="v-pills-tabContent">
+                  <!--Level 3 Diploma in Sports Massage tab-->
+                    <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                      <div class="container-fluid">
+                        <div class="row">
+                          <div class="col-12">
+                            <p>The course has 5 units which are:</p>
+                              <li>Principles of anatomy, physiology and fitness</li>
+                              <li>Professionalism and customer care for fitness instructors</li>
+                              <li>Health and safety in the fitness environment</li>
+                              <li>Conducting client consultations to support positive behaviour change</li>
+                              <li>Planning and instructing gym-based exercise</li>
+                              <br>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  <!--Level 4 Certificate in Sports Massage tab-->
+                    <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                      <div class="container-fluid">
+                        <div class="row">
+                          <div class="col-12">
+                              <p>The course has 6 units which are:</p>
+                                <li>Applied anatomy and physiology for exercise, health and fitness</li>
+                                <li>The principles of nutrition and their application to exercise and health</li>
+                                <li>Understanding lifestyle, health, wellbeing and common medical
+                                  conditions</li>
+                                <li>Encouraging positive health and fitness behaviours in clients</li>
+                                <li>Programme design and delivery for personal training</li>
+                                <li>Professionalism and business acumen for personal trainers</li>
+                                <br>
+                          </div>
+                          </div>
+                       </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -264,37 +324,41 @@
       <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              First Aid Courses <img class="icon" src="/assets/images/first-aid-cropped.png" alt="">
+              First Aid Courses <img class="icon" src="/assets/images/gm-icon-small.png" alt="">
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
-            <div class="accordion-body">
-              <div class="container-fluid">
-                <div class="row top-tabs">
-                  <div class="col-12 col-md-6">
-                    <h3>Emergency First Aid & First Aid at Work</h3>
-                    <p>The difference between the 2 first aid courses we deliver is:</p>
-                      <p><strong>Emergency First Aid at Work</strong></p> 
-                      <p>This is for an exclusive 1 day course for anyone to either renew their first aid qualifications or to do for the first time. 
-                      The maximum number of attendees is up to 12, for more details on dates please email FirstAid@Balanced.Training for more information.
-                      There is also the option that you can get training at your own workplace depending on travel arrangements. 
-                      The qualification will certificate the learners on completion for 3 years and is an officially recognised course.</p>
-                    <br>
-                      <p><strong>First Aid at Work</strong></p> 
-                      <p>This is a 3 day course for anyone to either renew their first aid qualifications or to do for the first time. 
-                      It is a much more comprehensive first aid course with far more time to explore more first aid sitations and what 
-                      to do in the event of a first aid emergency in the workplace.
-                      The maximum number of attendees is up to 12, for more details on dates please email FirstAid@Balanced.Training for more information.
-                      There is also the option that you can get training at your own workplace depending on travel arrangements. 
-                      The qualification will certificate the learners on completion for 3 years and is an officially recognised course.</p>
-                    <p></p>
-                  </div>
-                  <div class="col-12 col-md-6">
-                    <img class="acc-pt-pic" src="/assets/images/first-aid-full.png" alt="">
-                  </div>
-                </div>
-                </div>
-              </div>
+            <div class="accordion-body"></div>
+             <div class="container-fluid membership-img">
+               <div class="row">
+                 <div class="col-12 col-md-6">
+                  <ul class="list-group">
+                    <li class="list-group-item"><h4 class="list-header">Studio Membership</h4></li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Unlimited access to Studio facilities during Opening hours</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Initial goal setting session</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Free Private Induction session</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Ongoing Support from our motivating trainers</li>
+                    <li class="list-group-item list-group-item-info"><h3>£24.99</h3></li>
+                    <li class="list-group-item list-group-item-info btn get-started"><a href="https://pay.gocardless.com/AL00035RP1FPVA" target="_blank"><h3>Get Started</h3></a></li>
+                  </ul>
+                 </div>
+                 <div class="col-12 col-md-6">
+                  <ul class="list-group">
+                    <li class="list-group-item"><h4 class="list-header">Studio Membership & Plan</h4></li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Monthly Program based on initial goals</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Monthly Session with a Personal Trainer to work through plan</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Unlimited access to Studio facilities during Opening hours</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Initial goal setting session</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Free Private Induction session</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Ongoing Support from our motivating trainers</li>
+                    <li class="list-group-item list-group-item-info"><h3>£74.95</h3></li> 
+                    <li class="list-group-item list-group-item-info btn get-started"><a href="https://pay.gocardless.com/AL0004CDGKQFY7" target="_blank"><h3>Get Started</h3></a></li>
+                  </ul>
+                 </div>
+                 <p class="membership-agreement">After stting up the subscription membership is rolling and will be renewed 
+                  each month close to the day of month originally set up until the time you wish to cancel.</p>
+               </div>
+             </div>
           </div>
       </div>
       
